[package]
name = "sentc-crypto-common"
description = "Common shared values between sentc server api and the sentc client sdk."
version = "0.9.2"
edition = "2021"
license-file = "LICENSE"
repository = "https://github.com/sentclose/sentc-common"
homepage = "https://sentc.com/"
authors = ["Sentclose <contact@sentclose.com>", "Jörn Heinemann <j.heinemann@sentclose.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

include = [
    "Cargo.toml",
    "LICENSE",
    "src/**/*",
]

[dependencies]
# json handling
serde_json = {version = "1.0.81", default-features = false, features = ["alloc"]}
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }